2003-08-19  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.7alpha5.

2003-08-18  Jp Calderone <exarkun@twistedmatrix.com>

	* twisted/protocols/imap4.py: Remove support code for old versions
	of IMailbox.fetch(); also change the interface once again (no
	backwards compat this time) to require sequence numbers to be
	returned, not just whatever the MessageSet spit out.

2003-08-16  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_import.py: update for enterprise

	* twisted/enterprise/sqlreflector.py: use dbpool directly

	* twisted/enterprise/row.py: deprecate KeyFactory and StatementBatch

	* twisted/enterprise/dbpassport.py: remove

	* twisted/enterprise/dbgadgets.py: deprecate all

	* twisted/enterprise/dbcred.py: deprecate all

	* twisted/enterprise/adbapi.py: deprecate Augmentation. deprecate
	crufty bits of ConnectionPool API.

2003-08-11  Dave Peticolas  <dave@krondo.com>

	* twisted/enterprise/sqlreflector.py: fix docs

2003-08-08  Donovan Preston  <dp@twistedmatrix.com>

	* Added getAllPatterns API to Widget, which returns all nodes
	which have the given pattern name.

	* Refactored List widget to use getAllPatterns, so you can have
	more than one listHeader, listFooter, and emptyList node.

2003-08-08  Dave Peticolas  <dave@krondo.com>

	* twisted/internet/base.py: remove unused internal function.

	* twisted/internet/gladereactor.py: remove unused internal function.
	clean up imports.

2003-08-07  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.7alpha4.

2003-08-06  Donovan Preston <dp@twistedmatrix.com>

	* Major woven optimizations.

	* Removal of inspect-based hacks allowing backwards compatibility
	with the old IModel interface. All your IModel methods should take
	the request as the first argument now.

	* Default to non-case-preserving when importing Woven templates,
	and case-insensitive microdom. If you are using getPattern or