@@ -1,3 +1,8 @@
+2003-08-23  Brian Warner  <warner@lothar.com>
+
+	* twisted/internet/gtk2reactor.py: force timeout values to be
+	integers, because recent pygtk's complain when they get floats
+
 2003-08-19  Christopher Armstrong  <radix@twistedmatrix.com>
 
 	* .: Releasing Twisted 1.0.7alpha5.
